--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,12 +9,27 @@
         android:id="@+id/navigation_home"
         android:name="net.mkgiles.postmark.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_viewFragment2"
+            app:destination="@id/navigation_view" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="net.mkgiles.postmark.ui.about.AboutFragment"
         android:label="@string/title_about"
         tools:layout="@layout/fragment_about" />
+    <action
+        android:id="@+id/action_global_navigation_home"
+        app:destination="@id/navigation_home" />
+    <fragment
+        android:id="@+id/navigation_view"
+        android:name="net.mkgiles.postmark.ui.view.ViewFragment"
+        android:label="ViewFragment" >
+        <argument
+            android:name="parcel"
+            app:argType="net.mkgiles.postmark.models.PackageModel" />
+    </fragment>
 
 </navigation>
