--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_home"
@@ -13,5 +12,9 @@
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/title_about"
         android:visible="true" />
+    <item
+        android:id="@+id/sign_out"
+        android:icon="@drawable/ic_exit_black_24dp"
+        android:title="Sign Out" />
 
 </menu>
